End First Exercise

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Studenti</title>
 </head>
 <body>
+<!-- PRIMO ESERCIZIO -->
+    <div class="primo-esercizio">
+        <h1 class="studente-dati">Dati dello studente : </h1>
+        <h1 class="studente"></h1>
+    </div>
+<!-- SECONDO ESERCIZIO -->
+    <div class="secondo-esercizio">
+
+    </div>
+    <!-- JQuery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- JS -->
     <script src="js/app.js"></script>
 </body>
