End third exercise ! END !

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     </div>
 <!-- SECONDO ESERCIZIO -->
     <div class="secondo-esercizio">
-
+        <h1 class="studenti-dati">Il nome e cognome degli studenti sono :</h1>
+        <h1 class="studenti"></h1>
     </div>
+<!-- TERZO ESERCIZIO -->
+<div class="secondo-esercizio">
+    <h1 class="studenti-utente-dati">Il nome e cognome degli studenti con l'ultimo aggiunto sono :</h1>
+    <h1 class="studenti-utente"></h1>
+</div>
     <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <!-- JS -->
